# fastiq

./: .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PRD.md  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.pyartisan/: manifest.yaml
.pyartisan/stubs/feature/: __init__.py.jinja  repository.py.jinja  router.py.jinja  schemas.py.jinja  service.py.jinja
.pyartisan/stubs/model/: {{name_lower}}.py.jinja
.pyartisan/stubs/module/: __init__.py.jinja  repository.py.jinja  router.py.jinja  schemas.py.jinja  service.py.jinja
alembic/: env.py
alembic/versions/: 9e5d55379fdd_add_refresh_tokens_table.py  f03499ad619a_initial_schema.py
app/: main.py
app/config/: constants.py  database.py  logger.py  security.py  settings.py
app/core/: dependencies.py  exceptions.py  middleware.py  pagination.py  responses.py
app/models/: __init__.py  refresh_token.py  user.py
app/modules/auth/: repository.py  router.py  schemas.py  service.py
app/modules/users/: repository.py  router.py  schemas.py  service.py
app/scripts/: seed.py
app/scripts/seeders/: user_seeder.py
app/utils/: uuid.py
docs/superpowers/plans/: 2026-07-15-fastiq-phase1-implementation.md  2026-07-16-fastiq-phase2-auth-implementation.md
tests/: conftest.py  test_auth_repository.py  test_auth_router.py  test_auth_schemas.py  test_auth_service.py  test_core.py  test_database.py  test_middleware.py  test_refresh_token_model.py  test_security_tokens.py  test_seeder.py  test_smoke.py  test_users_router.py  test_users_schemas.py  test_users_service.py
(+2 files in other folders)
