[project]
name = "fastiq"
version = "0.1.0"
description = "Opinionated FastAPI Project Template"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic-settings>=2.3.4",
    "sqlalchemy[asyncio]>=2.0.31",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "uuid6>=2024.7.10",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1.0",
    "email-validator>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "strict"